# ContinuumExcitableElasticity

./: .gitignore  ContinuumExcitableElasticityScript.py  pyproject.toml
FDM/: FDM_main.py
FDM/src/: FDManalysis.py  FDMsim.py
data/: disp  strain
sims/: TypicalRun.ipynb
sims/.ipynb_checkpoints/: TypicalRun-checkpoint.ipynb
src/: ContinuumExcitableElasticity.py  Visualisation.py
src/phi formulation/1D/: anim.ipynb  sim.ipynb
src/phi formulation/1D/data/: test
src/phi formulation/2D/: anim.ipynb  sim.ipynb
